test_regress/t/t_timing_fork_unsup.out
%Error-LIFETIME: t/t_timing_fork_unsup.v:12:12: Invalid reference: Process might outlive variable `x`.
                                              : ... In instance t
                                              : ... Suggest use it as read-only to initialize a local copy at the beginning of the process, or declare it as static. It is also possible to refer by reference to objects and their members.
   12 |         #6 x = 4;
      |            ^
                 ... For error description see https://verilator.org/warn/LIFETIME?v=latest
%Error-LIFETIME: t/t_timing_fork_unsup.v:13:12: Invalid reference: Process might outlive variable `x`.
                                              : ... In instance t
                                              : ... Suggest use it as read-only to initialize a local copy at the beginning of the process, or declare it as static. It is also possible to refer by reference to objects and their members.
   13 |         #2 x++;
      |            ^
%Error-LIFETIME: t/t_timing_fork_unsup.v:14:9: Invalid reference: Process might outlive variable `x`.
                                             : ... In instance t
                                              : ... Suggest use it as read-only to initialize a local copy at the beginning of the process, or declare it as static. It is also possible to refer by reference to objects and their members.
   14 |         x = #4 x * 3;
      |         ^
%Error: Exiting due to
